force-app/main/default/objects/TVA_CO__Email_Validation_Configurations__c/TVA_CO__Email_Validation_Configurations__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Email Validation Configurations</label>
</CustomObject>