force-app/main/default/objects/TVA_CO__Email_Validation_Configurations__c/fields/TVA_CO__Object_API__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Object_API__c</fullName>
    <label>Object API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>