force-app/main/default/objects/TVA_CO__Email_Validation_Configurations__c/fields/TVA_CO__Score_Field_API__c.field-meta.xml
<CustomField>
    <fullName>TVA_CO__Score_Field_API__c</fullName>
    <label>Score Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>